feat: 거래소코인 기본 제외할 코인 셋팅, 탐지비활성화 필터링 추가